--- a/order/pom.xml
+++ b/order/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.dz</groupId>
     <artifactId>order</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>order</name>
     <description>Demo project for Spring Boot</description>
 
