--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,90 @@
-version: '3'
+version: '3.3'
 services:
   eureka-server:
     build:
-      context: ./eureka
+      context: ./eureka/
       dockerfile: Dockerfile
+    container_name: eureka-server
     ports:
       - "8761:8761"
+    networks:
+      - mynetwork
+
+  database:
+    image: mysql
+    container_name: mysql-db
+    ports:
+      - "3307:3306"
+    volumes:
+      - mysql_volume:/var/lib/mysql
+    environment:
+      MYSQL_DATABASE: library
+      MYSQL_ROOT_PASSWORD: root
+    networks:
+      - mynetwork
 
   student:
     build:
       context: ./student/
       dockerfile: Dockerfile
+    container_name: student-service
     ports:
       - "8000:8000"
+    environment:
+      MYSQL_URL: jdbc:mysql://database:3306/library?autoReconnect=true&createDatabaseIfNotExist=true
+      MYSQL_USERNAME: root
+      MYSQL_PASSWORD: root
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+    depends_on:
+      - database
+    links:
+      - eureka-server
+    networks:
+      - mynetwork
 
   library:
     build:
       context: ./library/
       dockerfile: Dockerfile
+    container_name: library-service
     ports:
       - "8001:8001"
+    environment:
+      MYSQL_URL: jdbc:mysql://database:3306/library?autoReconnect=true&createDatabaseIfNotExist=true
+      MYSQL_USERNAME: root
+      MYSQL_PASSWORD: root
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+    depends_on:
+      - database
+    links:
+      - eureka-server
+      - student
+    networks:
+      - mynetwork
 
   order:
     build:
       context: ./order/
       dockerfile: Dockerfile
+    container_name: order-service
     ports:
       - "8002:8002"
+    environment:
+      MYSQL_URL: jdbc:mysql://database:3306/library?autoReconnect=true&createDatabaseIfNotExist=true
+      MYSQL_USERNAME: root
+      MYSQL_PASSWORD: root
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+    depends_on:
+      - database
+    links:
+      - eureka-server
+      - student
+      - library
+    networks:
+      - mynetwork
+
+
+volumes:
+  mysql_volume :
+networks:
+  mynetwork :
