--- a/student/Dockerfile
+++ b/student/Dockerfile
@@ -1,4 +1,4 @@
 FROM java:8
 EXPOSE 8000
-ADD /target/student-0.0.1-SNAPSHOT.war student-0.0.1-SNAPSHOT.war
+COPY /target/student-0.0.1-SNAPSHOT.war /student-0.0.1-SNAPSHOT.war
 ENTRYPOINT ["java","-jar","student-0.0.1-SNAPSHOT.war"]
