--- a/student/src/main/resources/application.properties
+++ b/student/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-# suppress inspection "SpringBootApplicationProperties" for whole file
 spring.application.name = student
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 server.port = 8000
-#eureka.instance.hostname = "my-eureka"
+
+eureka.client.register-with-eureka = true
+eureka.client.fetch-registry = true
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
 
 #DB properties
 mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/library?useSSL=false
+mysql.url=jdbc:mysql://database:3306/library?autoReconnect=true&createDatabaseIfNotExist=true
 mysql.username=root
 mysql.password=root
-mysql.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+mysql.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 mysql.hibernate.show_sql=true
 mysql.hibernate.hbm2ddl.auto=update
