--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -12,7 +12,7 @@ eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
 
 #DB properties
 mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.url=jdbc:mysql://database:3306/library?autoReconnect=true&createDatabaseIfNotExist=true
+mysql.url=jdbc:mysql://localhost:3306/library?autoReconnect=true&createDatabaseIfNotExist=true
 mysql.username=root
 mysql.password=root
 mysql.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
